[tool.poetry]
name = "envtest-wgrib2"
version = "1.0.0"
description = "Wgrib2's compatibility with JMA products."
authors = ["Ryo Kaneko <deepkneko@gmail.com>"]
readme = "README.md"
packages = [{include = "envtest_wgrib2"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.2"
xarray = "^2022.12.0"
Cartopy = "^0.21.1"
netCDF4 = "^1.6.2"
metcalcpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
